# odri_control_interface

./: .gitignore  CMakeLists.txt  flake.nix  package.xml  readme.md
.github/workflows/: demos.yaml  nix.yml
demos/: RobotVisualizer.py  config_bolt.yaml  config_solo12.yaml  config_testbench.yaml  demo_bolt.cpp  demo_bolt.py  demo_create_solo12_robot.cpp  demo_solo12.cpp  demo_solo12.py  demo_solo12_from_yaml.cpp  demo_solo12_from_yaml.py  demo_solo12_imu.py  demo_solo12_pd.cpp  demo_testbech_joint_calibrator.py  demo_testbench.cpp  demo_testbench.py  demo_testbench_from_yaml.cpp  robot_calibrator.py  solo12.cpp  testbech_joint_calibrator.py
documentation/: calibration.md  configuration_file.md
include/odri_control_interface/: calibration.hpp  common.hpp  device.hpp  error.hpp  imu.hpp  joint_modules.hpp  powerboard.hpp  robot.hpp  utils.hpp
schemas/: robot.schema.json
src/: calibration.cpp  imu.cpp  joint_modules.cpp  powerboard.cpp  robot.cpp  utils.cpp
srcpy/: bindings.cpp  bindings.h
