<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">

    <name>odri_control_interface</name>
    <version>1.0.1</version>

    <description>
	Common interface for controlling robots build with the odri master board.
    </description>

    <maintainer email="jviereck@tuebingen.mpg.de">Julian Viereck</maintainer>

    <license>BSD 3-clause</license>

    <buildtool_depend>cmake</buildtool_depend>
    <buildtool_depend>mpi_cmake_modules</buildtool_depend>

    <!-- CMake module containing helper to find the OS, boost, python, etc. -->
    <depend>pybind11</depend>
    <depend>Threads</depend>
    <depend>master_board_sdk</depend>
    <depend>Boost</depend>
    <depend>Eigen3</depend>
    <depend>eigenpy</depend>

</package>
